--- a/src/components/filme.css
+++ b/src/components/filme.css
@@ -145,7 +145,7 @@ li {
     font-weight: 500;
 }
 
-#perfil{
+.perfil{
     width:50px;
     height:50px;
     object-fit: cover;
@@ -245,6 +245,87 @@ li {
     #abas{grid-area: 5 / 1 / 6 / 3}
 
 }
+
+/* Content */
+
+#content{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+}
+
+#content > * {
+    margin: 20px
+}
+
+/* Produções */
+
+#producoes{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+#producoes > *{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
+    width: 200px;
+    border-radius: 3px;
+    border: 2px rgb(0, 0 ,0, 1);
+    margin: 10px;
+}
+
+#producoes > *:hover{
+    background-color: #ddd;
+}
+
+#producoes > * > *:nth-child(2){
+    margin-top: 10px;
+    text-align: center;
+}
+
+/* Pôsteres */
+
+.poster{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.poster > *{
+    opacity: 0
+}
+.poster:hover{
+    background-blend-mode: multiply;
+}
+
+.poster:hover > *{
+    opacity: 1;
+}
+
+.poster > a{
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+    font-weight: 800;
+    font-family: 'Roboto', sans-serif;
+    padding-left: 2px;
+    padding-right: 2px;
+}
+
+.poster > a > span{
+    text-wrap: wrap;
+}
+
+.poster > .material-icons{
+    font-size: 50px;
+}
+
 
 /*Celular*/
 @media only screen and (orientation: portrait) {
